--- a/workbox-lab/project/package.json
+++ b/workbox-lab/project/package.json
@@ -7,10 +7,13 @@
     "browser-sync": "^2.18.12",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "workbox-build": "2.1.2",
+    "workbox-sw": "2.1.2"
   },
   "devDependencies": {},
   "scripts": {
+    "gulp": "gulp serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
