--- a/workbox-lab/webpack/package.json
+++ b/workbox-lab/webpack/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack && webpack-dev-server --open --hot"
   },
   "author": "",
   "license": "ISC"
