--- a/push-notification-lab/app/package.json
+++ b/push-notification-lab/app/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "sw.js",
   "scripts": {
+    "generate": "web-push generate-vapid-keys [--json]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "localtunnel": "1.8.3",
     "web-push": "^3.2.0"
   }
 }
